# fishcasting

./: .copier-answers.yml  .gitignore  README.md  build.gradle.kts  gradle.properties  libs.versions.toml  pyproject.toml  shell.nix
.github/workflows/: build_docs.yml
doc/: README.md  hexdoc.toml
doc/resources/assets/fishcasting/lang/: en_us.flatten.json5  en_us.flatten.json5.disabled
doc/resources/assets/fishcasting/recipes/: amethyst_focus_bobber.json
doc/resources/assets/tide/models/item/: amethyst_bobber.json  amethyst_fishing_bobber.json  bait.json  crystal_fishing_rod.json  fish_satchel.json  fishing_journal.json
doc/resources/data/fishcasting/recipes/: amethyst_focus_bobber.json  benign_bait.json  blessed_bobber_smithing.json  charged_amethyst_from_carp.json  charged_amethyst_from_shrimp_manual_only.json  crystal_casting_rod_smithing.json  hookless_fishing_hook.json  loud_fishing_line.json  shepherds_rod_smithing.json  tacklebox_chair.json  unlucky_bait.json
doc/resources/data/fishcasting/recipes/brainsweep/: curse_wandering_trader.json
doc/resources/data/fishcasting/recipes/lightning/: bless_cursed.json  bless_cursed.json.disabled
doc/resources/data/hexdoc/tags/advancements/: spoilered.json
doc/resources/data/tide/recipes/: amethyst_from_shrimp.json
doc/src/hexdoc_fishcasting/: _hooks.py  pages.py  recipes.py
doc/src/hexdoc_fishcasting/_templates/: index.css.jinja
doc/src/hexdoc_fishcasting/_templates/ingredients/fishcasting/struck_by_lightning/: input.html.jinja  output.html.jinja  zap.html.jinja
doc/src/hexdoc_fishcasting/_templates/pages/hexcasting/fishcasting/: brainsweep_void.html.jinja  struck_by_lightning.html.jinja
doc/src/hexdoc_fishcasting/_templates/recipes/hexcasting/: brainsweep_void_clueless.jinja
doc/src/hexdoc_fishcasting/_templates/recipes/hexcasting/fishcasting/: brainsweep_void.html.jinja  struck_by_lightning.html.jinja
docs/: index.html
docs/meta/: sitemap-minecraft.json  sitemap.json
docs/v/latest/main/en_us/: .sitemap-marker.json  index.css  index.html  index.js
docs/v/latest/main/en_us/basics/: index.html
docs/v/latest/main/en_us/casting/: index.html
docs/v/latest/main/en_us/greatwork/: index.html
docs/v/latest/main/en_us/greatwork/fanciful_fishing/: index.html
docs/v/latest/main/en_us/interop/: index.html
docs/v/latest/main/en_us/items/: index.html
docs/v/latest/main/en_us/items/casting_rod/: index.html
docs/v/latest/main/en_us/lore/: index.html
docs/v/latest/main/en_us/patterns/: index.html
src/common/: fishcasting.mixins.json
src/common/main/java/hauveli/fishcasting/: CommonClass.java
src/common/main/kotlin/hauveli/fishcasting/: Fishcasting.kt  FishcastingAbstractions.kt
src/common/main/resources/: pack.mcmeta
src/common/main/resources/assets/fishcasting/: sounds.json
src/fabric/1.21.1/: fishcasting-fabric.mixins.json
src/fabric/1.21.1/main/resources/: fabric.mod.json
src/neoforge/1.21.1/: fishcasting-neoforge.mixins.json
(+292 files in other folders)
